<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="brice_bastien.epicture.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" >
    </item>

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/app_bar_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/app_bar_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search_white"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.widget.SearchView" />


</menu>
