...
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true">

                <ToggleButton
                    android:id="@+id/button_favorite"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_margin="@dimen/basic_margin"
                    android:background="@drawable/button_favorite"
                    android:checked="false"
                    android:text=""
...
